bugfix: align logo in header
closes #56

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -21,6 +21,12 @@
 	left: 0;
 }
 
+@media only screen and (max-width: 600px) {
+	.header__logo {
+		margin: 10px 10px;
+	}
+}
+
 .header__title {
 	max-width: 863px;
 	display: flex;
@@ -35,7 +41,7 @@
 	color: var(--white);
 }
 
-@media only screen and (max-width: 480) {
+@media only screen and (max-width: 480px) {
 	.header__title h1 {
 		margin-top: 6rem;
 	}
